Tue Mar 08 05:56:42 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc,backends/chert/chert_table.cc,
	  backends/flint/flint_table.cc: If we try to delete an old base file
	  and it isn't there, just continue rather than throwing an exception.
	  We wanted to get rid of it anyway, and it may be NFS issues telling
	  us the wrong thing.  In particular, DatabaseCoruptError was rather
	  a pessimistic assessment.

Tue Mar 08 05:55:48 GMT 2011  Olly Betts <olly@survex.com>

	* common/io_utils.h: Note that io_unlink() may return false when it
	  should have returned true on NFS.

Sun Mar 06 23:25:47 GMT 2011  Olly Betts <olly@survex.com>

	* common/io_utils.cc,common/io_utils.h: Add io_unlink().
	* backends/brass/brass_database.cc,backends/brass/brass_table.cc,
	  backends/chert/chert_database.cc,backends/chert/chert_table.cc,
	  backends/flint/flint_database.cc,backends/flint/flint_table.cc:
	  Use io_unlink() instead of sys_unlink_if_exists().

Sun Mar 06 22:26:36 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc,backends/chert/chert_database.cc,
	  backends/flint/flint_database.cc: If DANGEROUS mode is turned on,
	  then actually set the flag for this in replication changes files
	  (the reader will currently throw an exception, but that's better
	  than quietly handling them incorrectly).

Sat Mar 05 12:58:31 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sat Mar 05 12:49:16 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Fix a few typos.

Sat Mar 05 06:19:25 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Fix typo in old entry.

Sat Mar 05 06:16:41 GMT 2011  Olly Betts <olly@survex.com>

	* common/remoteconnection.h: Internal doc comment improvements: Fix
	  typo, finish truncated sentence, wrap lines to 80 columns.

Sat Mar 05 02:59:35 GMT 2011  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: Make sure port number is specified.  Add